--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "fambot",
+  "name": "boomsongs",
   "version": "1.0.0",
-  "description": "Bot for Fam's server",
-  "main": "index.js",
+  "description": "website",
+  "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "not fam",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^12.5.1"
+    ".html": "^12.5.1"
   }
 }
